samples/_failures_safe/1761138272_083497_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6a05970d.c: In function ‘main’:
./samples/SAFE/__tmp_6a05970d.c:162: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_6a05970d.c:161:5: error: expected declaration or statement at end of input
  161 |     if
      |     ^~
